<resources>
    <string name="app_name">Teens18</string>
    <string name="search">Search</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="settings">Settings</string>
    <string name="appearance">APPEARANCE</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="system_default">System Default</string>
    <string name="storage">STORAGE</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="about">ABOUT</string>
    <string name="featured_image">Featured Image</string>
    <string name="toggle_theme">Toggle theme</string>
    <string name="bookmark">Bookmark</string>
</resources>